Implement Outlet in use state
