# docs/openapi.yaml
@@ -225,34 +225,42 @@ paths:
           content:
             application/json:
               schema:
-                allOf:
-                  - $ref: "#/components/schemas/AbstractAcessoryInternalState"
-                  - type: object
-                    properties:
-                      state:
-                        type: boolean
-                        nullable: true
-                      events:
-                        type: array
-                        items:
-                          oneOf:
-                            - type: object
-                              properties:
-                                turnedOffAt:
-                                  type: string
-                                  format: date-time
-                              required:
-                                - turnedOffAt
-                            - type: object
-                              properties:
-                                turnedOnAt:
-                                  type: string
-                                  format: date-time
-                              required:
-                                - turnedOnAt
-                    required:
-                      - state
-                      - events
+                $ref: "#/components/schemas/OutletInternalState"
+    patch:
+      summary: Update Internal State
+      tags:
+        - Outlets
+        - Internal
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Outlet ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                inUse:
+                  type: boolean
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OutletInternalState"
+        400:
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: Bad Request
 
   /pushbuttons/{id}/push:
     get:
@@ -538,6 +546,50 @@ components:
       required:
         - id
         - name
+    OutletInternalState:
+      allOf:
+        - $ref: "#/components/schemas/AbstractAcessoryInternalState"
+        - type: object
+          properties:
+            inUse:
+              type: boolean
+              nullable: true
+            state:
+              type: boolean
+              nullable: true
+            events:
+              type: array
+              items:
+                oneOf:
+                  - type: object
+                    properties:
+                      changedAt:
+                        type: string
+                        format: date-time
+                      inUse:
+                        type: boolean
+                    required:
+                      - changedAt
+                      - inUse
+                  - type: object
+                    properties:
+                      turnedOffAt:
+                        type: string
+                        format: date-time
+                    required:
+                      - turnedOffAt
+                  - type: object
+                    properties:
+                      turnedOnAt:
+                        type: string
+                        format: date-time
+                    required:
+                      - turnedOnAt
+          required:
+            - inUse
+            - state
+            - events
+
     ThermostatInternalState:
       allOf:
         - $ref: "#/components/schemas/AbstractAcessoryInternalState"
